--- a/account-service.yml
+++ b/account-service.yml
@@ -7,7 +7,7 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: ${vcap.services.user-service.credentials.uri:http://localhost:8181}/uaa/user
+      userInfoUri: ${vcap.services.user-service.credentials.uri:http://192.168.4.63:8181}/uaa/user
     client:
       client-id: acme
 ---
@@ -21,15 +21,15 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://localhost:8181/uaa/user
+      userInfoUri: http://192.168.4.63:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://localhost:8787
+      access-token-uri: http://192.168.4.63:8787
 ---
 spring:
   profiles: docker
   datasource:
-    url: jdbc:mysql://mysql:3306/dev
+    url: jdbc:mysql://192.168.4.63:3306/dev
     username: root
     password: dbpass
     initialize: true
@@ -46,7 +46,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   application:
@@ -61,7 +61,7 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://localhost:8181/uaa/user
+      userInfoUri: http://192.168.4.63:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://localhost:8787
+      access-token-uri: http://192.168.4.63:8787
