--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -5,7 +5,7 @@ spring:
 spring:
   profiles: cloud
   redis:
-    host: ${vcap.services.catalog-redis.credentials.hostname:localhost}
+    host: ${vcap.services.catalog-redis.credentials.hostname:192.168.4.63}
     port: ${vcap.services.catalog-redis.credentials.port:6379}
 ---
 spring:
@@ -25,7 +25,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: docker
@@ -33,7 +33,7 @@ spring:
     host: redis
     port: 6379
   datasource:
-    url: jdbc:mysql://mysql:3306/dev?useSSL=false
+    url: jdbc:mysql://192.168.4.63:3306/dev?useSSL=false
     username: root
     password: dbpass
     initialize: true
@@ -44,12 +44,12 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: test
   redis:
-    host: localhost
+    host: 192.168.4.63
     port: 6379
   jpa:
     database: H2
