--- a/online-store-web.yml
+++ b/online-store-web.yml
@@ -11,20 +11,20 @@ zuul:
   routes:
     edge-service:
       path: /api/**
-      url: ${vcap.services.edge-service.credentials.uri:http://localhost:9999}
+      url: ${vcap.services.edge-service.credentials.uri:http://192.168.4.63:9999}
     auth-service:
       path: /user/**
-      url: ${vcap.services.user-service.credentials.uri:http://localhost:8181}/uaa/user
+      url: ${vcap.services.user-service.credentials.uri:http://192.168.4.63:8181}/uaa/user
     user-service:
       path: /users/**
 security:
   enable-csrf: false
   oauth2:
     resource:
-      userInfoUri: ${vcap.services.user-service.credentials.uri:http://localhost:8181}/uaa/user
+      userInfoUri: ${vcap.services.user-service.credentials.uri:http://192.168.4.63:8181}/uaa/user
     client:
-      accessTokenUri: ${vcap.services.user-service.credentials.uri:http://localhost:8181}/uaa/oauth/token
-      userAuthorizationUri: ${vcap.services.user-service.credentials.uri:http://localhost:8181}/uaa/oauth/authorize
+      accessTokenUri: ${vcap.services.user-service.credentials.uri:http://192.168.4.63:8181}/uaa/oauth/token
+      userAuthorizationUri: ${vcap.services.user-service.credentials.uri:http://192.168.4.63:8181}/uaa/oauth/authorize
       clientId: acme
       clientSecret: acmesecret
   ignored: /assets/**
@@ -38,20 +38,20 @@ zuul:
   routes:
     edge-service:
       path: /api/**
-      url: http://localhost:9999
+      url: http://192.168.4.63:9999
     auth-service:
       path: /user/**
-      url: http://localhost:8181/uaa/user
+      url: http://192.168.4.63:8181/uaa/user
     user-service:
       path: /users/**
 security:
   enable-csrf: false
   oauth2:
     resource:
-      userInfoUri: http://localhost:8181/uaa/user
+      userInfoUri: http://192.168.4.63:8181/uaa/user
     client:
-      accessTokenUri: http://localhost:8181/uaa/oauth/token
-      userAuthorizationUri: http://localhost:8181/uaa/oauth/authorize
+      accessTokenUri: http://192.168.4.63:8181/uaa/oauth/token
+      userAuthorizationUri: http://192.168.4.63:8181/uaa/oauth/authorize
       clientId: acme
       clientSecret: acmesecret
 eureka:
@@ -62,7 +62,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: docker
@@ -97,4 +97,4 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
