--- a/order-service.yml
+++ b/order-service.yml
@@ -4,7 +4,7 @@ spring:
   profiles: cloud
   data:
     mongodb:
-      host: ${vcap.services.order-db.credentials.hostname:localhost}
+      host: ${vcap.services.order-db.credentials.hostname:192.168.4.63}
       port: ${vcap.services.order-db.credentials.port:27017}
   mvc:
     date-format: "YYYY-MM-dd"
@@ -15,7 +15,7 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: ${vcap.services.user-service.credentials.uri:http://localhost:8181}/uaa/user
+      userInfoUri: ${vcap.services.user-service.credentials.uri:http://192.168.4.63:8181}/uaa/user
     client:
       client-id: acme
 ---
@@ -34,10 +34,10 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://localhost:8181/uaa/user
+      userInfoUri: http://192.168.4.63:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://localhost:8787
+      access-token-uri: http://192.168.4.63:8787
 ---
 spring:
   profiles: docker
@@ -64,4 +64,4 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
