--- a/shopping-cart-service.yml
+++ b/shopping-cart-service.yml
@@ -9,7 +9,7 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: ${vcap.services.user-service.credentials.uri:http://localhost:8181}/uaa/user
+      userInfoUri: ${vcap.services.user-service.credentials.uri:http://192.168.4.63:8181}/uaa/user
     client:
       client-id: acme
   enable-csrf: false
@@ -39,7 +39,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: docker
@@ -48,7 +48,7 @@ spring:
     database: MYSQL
     generate-ddl: true
   datasource:
-    url: jdbc:mysql://mysql:3306/dev
+    url: jdbc:mysql://192.168.4.63:3306/dev
     username: root
     password: dbpass
 security:
@@ -65,7 +65,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   application:
@@ -79,7 +79,7 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://localhost:8181/uaa/user
+      userInfoUri: http://192.168.4.63:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://localhost:8787
+      access-token-uri: http://192.168.4.63:8787
