--- a/user-service.yml
+++ b/user-service.yml
@@ -39,7 +39,7 @@ security:
 spring:
   profiles: docker
   datasource:
-    url: jdbc:mysql://mysql:3306/dev
+    url: jdbc:mysql://192.168.4.63:3306/dev
     username: root
     password: dbpass
     initialize: true
@@ -52,7 +52,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: test
