--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -5,18 +5,18 @@ spring:
 spring:
   profiles: cloud
   redis:
-    host: ${vcap.services.catalog-redis.credentials.hostname:192.168.4.63}
+    host: ${vcap.services.catalog-redis.credentials.hostname:192.168.4.11}
     port: ${vcap.services.catalog-redis.credentials.port:6379}
 ---
 spring:
   profiles: development
   redis:
-    host: 192.168.4.63
+    host: 192.168.4.11
     port: 6379
   datasource:
-    url: jdbc:mysql://192.168.4.63:3306/dev?useSSL=false
+    url: jdbc:mysql://192.168.4.11:3306/dev?useSSL=false
     username: root
-    password: dbpass
+    password: 3g2win.com
     initialize: false
 eureka:
   instance:
@@ -30,12 +30,12 @@ eureka:
 spring:
   profiles: docker
   redis:
-    host: redis
+    host: 192.168.4.11
     port: 6379
   datasource:
-    url: jdbc:mysql://192.168.4.63:3306/dev?useSSL=false
+    url: jdbc:mysql://192.168.4.11:3306/dev?useSSL=false
     username: root
-    password: dbpass
+    password: 3g2win.com
     initialize: true
 eureka:
   instance:
@@ -49,7 +49,7 @@ eureka:
 spring:
   profiles: test
   redis:
-    host: 192.168.4.63
+    host: 192.168.4.11
     port: 6379
   jpa:
     database: H2
