--- a/user-service.yml
+++ b/user-service.yml
@@ -23,9 +23,9 @@ logging.level.org.springframework.security: DEBUG
 spring:
   profiles: development
   datasource:
-    url: jdbc:mysql://192.168.4.11:3306/dev
+    url: jdbc:mysql://192.168.4.63:3306/dev
     username: root
-    password: 3g2win.com
+    password: dbpass
     initialize: true
 security.ignored: /resources/**
 ---
