--- a/account-service.yml
+++ b/account-service.yml
@@ -7,36 +7,36 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: ${vcap.services.user-service.credentials.uri:http://192.168.1.64:8181}/uaa/user
+      userInfoUri: ${vcap.services.user-service.credentials.uri:http://localhost:8181}/uaa/user
     client:
       client-id: acme
 ---
 spring:
   profiles: development
   datasource:
-    url: jdbc:mysql://192.168.4.63:3306/dev
+    url: jdbc:mysql://192.168.99.100:3306/dev
     username: root
     password: dbpass
     initialize: false
 security:
   oauth2:
     resource:
-      userInfoUri: http://192.168.1.64:8181/uaa/user
+      userInfoUri: http://localhost:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://192.168.1.64:8787
+      access-token-uri: http://localhost:8787
 ---
 spring:
   profiles: docker
   datasource:
-    url: jdbc:mysql://192.168.4.63:3306/dev
+    url: jdbc:mysql://mysql:3306/dev
     username: root
     password: dbpass
     initialize: true
 security:
   oauth2:
     resource:
-      userInfoUri: http://${DOCKER_IP:192.168.1.64}:8181/uaa/user
+      userInfoUri: http://${DOCKER_IP:192.168.4.63}:8181/uaa/user
     client:
       client-id: acme
 eureka:
@@ -46,7 +46,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://192.168.4.63:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
 ---
 spring:
   application:
@@ -61,7 +61,7 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://192.168.1.64:8181/uaa/user
+      userInfoUri: http://192.168.4.63:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://192.168.1.64:8787
+      access-token-uri: http://192.168.4.63:8787
