--- a/inventory-service.yml
+++ b/inventory-service.yml
@@ -3,19 +3,19 @@ spring.profiles.active: development
 spring:
   profiles: cloud
   neo4j:
-    host: ${SPRING_NEO4J_HOST:192.168.4.63}
+    host: ${SPRING_NEO4J_HOST:192.168.99.101}
     port: ${SPRING_NEO4J_PORT:7474}
 ---
 spring:
   profiles: development
   neo4j:
-    host: ${SPRING_NEO4J_HOST:192.168.4.63}
+    host: ${SPRING_NEO4J_HOST:192.168.99.101}
     port: ${SPRING_NEO4J_PORT:7474}
 ---
 spring:
   profiles: docker
   neo4j:
-    host: ${SPRING_NEO4J_HOST:192.168.4.63}
+    host: ${SPRING_NEO4J_HOST:neo4j}
     port: ${SPRING_NEO4J_PORT:7474}
 eureka:
   instance:
@@ -24,12 +24,12 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://192.168.4.63:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
 ---
 spring:
   profiles: test
   neo4j:
-    host: ${SPRING_NEO4J_HOST:192.168.4.63}
+    host: ${SPRING_NEO4J_HOST:192.168.99.101}
     port: ${SPRING_NEO4J_PORT:7474}
 eureka:
   client:
