--- a/shopping-cart-service.yml
+++ b/shopping-cart-service.yml
@@ -5,11 +5,11 @@ spring:
 spring:
   profiles: cloud
   datasource:
-    platform: 192.168.4.63
+    platform: mysql
 security:
   oauth2:
     resource:
-      userInfoUri: ${vcap.services.user-service.credentials.uri:http://192.168.1.64:8181}/uaa/user
+      userInfoUri: ${vcap.services.user-service.credentials.uri:http://localhost:8181}/uaa/user
     client:
       client-id: acme
   enable-csrf: false
@@ -21,16 +21,16 @@ spring:
     database: MYSQL
     generate-ddl: true
   datasource:
-    url: jdbc:mysql://192.168.4.63:3306/dev
+    url: jdbc:mysql://192.168.99.100:3306/dev
     username: root
     password: dbpass
 security:
   oauth2:
     resource:
-      userInfoUri: http://192.168.1.64:8181/uaa/user
+      userInfoUri: http://192.168.99.100:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://192.168.1.64:8787
+      access-token-uri: http://192.168.99.100:8787
   enable-csrf: false
 eureka:
   instance:
@@ -39,7 +39,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://192.168.4.63:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 ---
 spring:
   profiles: docker
@@ -48,13 +48,13 @@ spring:
     database: MYSQL
     generate-ddl: true
   datasource:
-    url: jdbc:mysql://192.168.4.63:3306/dev
+    url: jdbc:mysql://mysql:3306/dev
     username: root
     password: dbpass
 security:
   oauth2:
     resource:
-      userInfoUri: http://${DOCKER_IP:192.168.1.64}:8181/uaa/user
+      userInfoUri: http://${DOCKER_IP:192.168.4.63}:8181/uaa/user
     client:
       client-id: acme
   enable-csrf: false
@@ -65,7 +65,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://192.168.4.63:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
 ---
 spring:
   application:
@@ -79,7 +79,7 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://192.168.1.64:8181/uaa/user
+      userInfoUri: http://localhost:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://192.168.1.64:8787
+      access-token-uri: http://localhost:8787
