--- a/account-service.yml
+++ b/account-service.yml
@@ -21,10 +21,18 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://localhost:8181/uaa/user
+      userInfoUri: http://192.168.4.63:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://localhost:8787
+      access-token-uri: http://192.168.4.63:8787
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: docker
