--- a/inventory-service.yml
+++ b/inventory-service.yml
@@ -9,8 +9,16 @@ spring:
 spring:
   profiles: development
   neo4j:
-    host: ${SPRING_NEO4J_HOST:192.168.99.101}
+    host: ${SPRING_NEO4J_HOST:192.168.4.63}
     port: ${SPRING_NEO4J_PORT:7474}
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: docker
