--- a/application-cloud.yml
+++ b/application-cloud.yml
@@ -1,6 +1,6 @@
 eureka:
   instance:
-    hostname: ${vcap.application.uris[0]:localhost}
+    hostname: ${vcap.application.uris[0]:192.168.4.63}
     nonSecurePort: 80
     metadataMap:
       instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
@@ -9,4 +9,4 @@ eureka:
     region: default
     registryFetchIntervalSeconds: 5
     serviceUrl:
-      defaultZone: ${vcap.services.discovery-service.credentials.uri:http://localhost:8761}/eureka/
+      defaultZone: ${vcap.services.discovery-service.credentials.uri:http://192.168.4.63:8761}/eureka/
