--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -11,10 +11,10 @@ spring:
 spring:
   profiles: development
   redis:
-    host: 192.168.99.100
+    host: 192.168.4.63
     port: 6379
   datasource:
-    url: jdbc:mysql://192.168.99.100:3306/dev?useSSL=false
+    url: jdbc:mysql://192.168.4.63:3306/dev?useSSL=false
     username: root
     password: dbpass
     initialize: false
@@ -25,7 +25,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: docker
