--- a/hystrix-dashboard.yml
+++ b/hystrix-dashboard.yml
@@ -11,7 +11,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: docker
