--- a/order-service.yml
+++ b/order-service.yml
@@ -23,7 +23,7 @@ spring:
   profiles: development
   data:
     mongodb:
-      host: 192.168.99.100
+      host: 192.168.4.63
       port: 27017
   mvc:
     date-format: "YYYY-MM-dd"
@@ -34,10 +34,19 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://localhost:8181/uaa/user
+      userInfoUri: http://192.168.4.63:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://localhost:8787
+      access-token-uri: http://192.168.4.63:8787
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://192.168.4.63:8761/eureka/
+
 ---
 spring:
   profiles: docker
@@ -64,4 +73,4 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
