--- a/shopping-cart-service.yml
+++ b/shopping-cart-service.yml
@@ -21,16 +21,16 @@ spring:
     database: MYSQL
     generate-ddl: true
   datasource:
-    url: jdbc:mysql://192.168.99.100:3306/dev
+    url: jdbc:mysql://192.168.4.63:3306/dev
     username: root
     password: dbpass
 security:
   oauth2:
     resource:
-      userInfoUri: http://192.168.99.100:8181/uaa/user
+      userInfoUri: http://192.168.4.63:8181/uaa/user
     client:
       client-id: acme
-      access-token-uri: http://192.168.99.100:8787
+      access-token-uri: http://192.168.4.63:8787
   enable-csrf: false
 eureka:
   instance:
@@ -39,7 +39,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.4.63:8761/eureka/
 ---
 spring:
   profiles: docker
